# ml-group35

./: .gitignore  README.md  news_articles_scraping.py  requirements.txt  scraped_data.json
KNN/: KNN.py
binance/: preprocess_binance.py
final_report/: bibliography.bib  report.tex
group_project_proposal/report/: report.tex
logistic_regression/: logistic_regression.py
news_articles/: likes_and_dislikes.json  news_articles_scraping.py
notebook/: evaluation.ipynb  knn_notebook.ipynb  logistic_regression_notebook.ipynb  notebook.ipynb  svm_notebook.ipynb
reddit/: pyproject.toml  reddit.py
src/binance/: binance_defaults.py  calculate_points.py  discrete_binance.py  preprocess_binance.py
src/logistic_regression/: pyproject.toml  results
src/news_articles/: scraped_reviews.json
src/reddit/: reddit.py
twitter/: twitter.py
