[tool.poetry]
name = "model_markus"
version = "0.1.0"
description = ""
authors = ["Asraelite <markusscully@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.3.4"
numpy = "^1.21.4"
sklearn = "^0.0"
matplotlib = "^3.5.0"
yapf = "^0.31.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
